# gw-signal-tools

./: .coverage  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  fisher_result_comparison.txt  gwsignal_code_suggestions.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: mirror.yml
docs/: HowTos.py  conf.py  gw_signal_tools.PSDs.rst  gw_signal_tools.fisher.rst  gw_signal_tools.rst  index.rst  modules.rst  overview.rst  plans.txt
docs/modules/: caching.rst  gw_signal_tools.PSDs.rst  gw_signal_tools.fisher.rst  gw_signal_tools.rst  gw_signal_tools.types.rst  gw_signal_tools.waveform.rst  inner_product.rst  matrix_with_units.rst  psd.rst  test_utils.rst  units.rst  waveform_utils.rst
docs/tutorials/: HowTos.py  caching.ipynb  derivative_tests.ipynb  derivative_tutorial.ipynb  fisher_and_derivative_tests.ipynb  fisher_tests.ipynb  fisher_tutorial.ipynb  ft_doc.ipynb  inner_product_tests.ipynb  inner_product_tutorial.ipynb  performance_tests.ipynb  tips.rst  units.ipynb
gw_signal_tools/: __init__.py  _version.py  caching.py  cosmo.py  fisher_matrix.py  fisher_utils.py  generator_utils.py  inner_product.py  logging.py  matrix_with_units.py  plot_stylesheet.sty  plotting.py  psd.py  test_utils.py  units.py  waveform_utils.py
gw_signal_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gw_signal_tools/PSDs/: O3_V1_asd.txt  __init__.py  no_psd.txt
gw_signal_tools/calibration/: __init__.py  wf_gen.py  wrapper_class.py
gw_signal_tools/fisher/: __init__.py  base_class.py  calc_utils.py  deriv.py  distances.py  fisher.py  fisher_network.py  fisher_utils.py  network.py
gw_signal_tools/types/: __init__.py  deriv.py  deriv_info.py  detector.py  gwsignal_types.py  hash_dict.py  matrix_with_units.py  nd_deriv.py  ndseries.py  network_waveform.py  series_matrix_with_units.py  stub.py
gw_signal_tools/units/: __init__.py  unit_sys.py
gw_signal_tools/waveform/: __init__.py  _error_helpers.py  deriv.py  ft.py  inner_product.py  nd_deriv.py  utils.py
gw_signal_tools/waveform/deriv/: __init__.py  ana_derivs.py  base.py  custom.py  deriv_amp_phase.py  deriv_base.py  deriv_gw_signal_tools.py  deriv_nd.py  deriv_wrapper.py  nd.py  nd_amp_phase.py  wrapper.py
tests/: README.md  difference_optimize.ipynb  f_ref_tests.ipynb  fisher_and_derivative_tests.ipynb  fisher_computation_tests.ipynb  fisher_projection_tests.ipynb  inner_product_tests.ipynb  matrix_class_tests.ipynb  performance_tests.ipynb  test_caching.py  test_calibration.py  test_deriv.py  test_detector.py  test_distances.py  test_error_helpers.py  test_fisher_class.py  test_fisher_matrix.py  test_fisher_network.py  test_fisher_utils.py  test_hashdict.py  test_inner_product.py  test_matrix_with_units.py  test_nd_deriv.py  test_network.py  test_units.py  test_waveform_ft.py  test_waveform_utils.py  type_tests.ipynb  unit_tests.ipynb  waveform_conversion_tests.ipynb
tests/fisher/: base_class_test.py  calc_utils_test.py  distances_test.py  fisher_class_test.py  fisher_network_test.py  network_test.py
tests/types/: detector_test.py  hashdict_test.py  matrix_with_units_test.py
tests/waveform/: error_helpers_test.py  inner_product_test.py  utils_test.py
tests/waveform/deriv/: deriv_test.py  nd_deriv_test.py
