# Credit to GWPy, where much of the contents of this file is copied from
# (link: https://github.com/gwpy/gwpy/blob/v3.0.7/pyproject.toml)


# [build-system]
# requires = [
#   'setuptools>=64',
#   'setuptools_scm>=8',
#   'wheel',
# ]

# build-backend = 'setuptools.build_meta'

# [project]
# name = 'gw_signal_tools'
# description = 'Tools for GW Data Analysis'
# readme = 'README.md'
# authors = [
#   {name = 'Max Melching', email = 'max.melching@aei.mpg.de'},
#   {name = 'Frank Ohme'},
# ]

# # requires
# requires-python = '==3.11.5'
# dependencies = [
#   'lalsuite[lalinference]',
#   'numpy',
#   'scipy',
#   # 'setuptools_scm',
#   'matplotlib'
# ]

# dynamic properties set by tools
# dynamic = [
#   'version',
# ]
# not sure if this has an effect as long as [project] commented
# -> installation still works, so we leave it for future to incorporate
# -> is probably not really dynamic if commented. But that no error is thrown
# when running it is good enough for now
# -> maybe it makes difference when we do not install with -e (editable mode
# perhaps makes it some kind of dynamic code already)


# [project.urls]
# "Source Code" = 'https://gitlab.aei.uni-hannover.de/fohme/gw-signal-tools'
# # "Documentation" = ''  # to be built
# "Bug Tracker" = 'https://gitlab.aei.uni-hannover.de/fohme/gw-signal-tools/issues'


# [project.optional-dependencies]
# dev = [
#   'pycbc',
#   'mypy',
#   'pytest',
#   'coverage'
# ]
# jupyter = [
#   'jupyter'
# ]


# [tool.setuptools.packages.find]
# # note: this is only required in CI, which otherwise fails because
# #       GHA is creating a temporary directory that setuptools
# #       discovers as another top-level package
# include = [
#   'gw_signal_tools*',
# ]


# how versioning is handled
# [tool.setuptools_scm]
# version_file = 'gw_signal_tools/_version.py'

# fallback_version = 'unknown'  # what is done if no version found


# Syntax from https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file

# [tool.mypy]
# show_error_codes = True
# Throws error, but does not seem to be needed

[[tool.mypy.overrides]]
module = [
  'astropy.*',
  'gwpy.*',
  'lalsimulation.*',
  'scipy.*'
]

ignore_missing_imports = true


# Syntax: https://docs.pytest.org/en/7.3.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = [
  'tests',
]

filterwarnings = [
  'ignore:pkg_resources is deprecated as an API..*',
  # ignore: Deprecated call to `pkg_resources.declare_namespace('ligo')`..*  ; Including string 'ligo' does not work
  'ignore:Deprecated call to `pkg_resources.declare_namespace(.*)`.*',
  'ignore:This code is currently UNREVIEWED, use with caution!',
]


# Syntax from https://coverage.readthedocs.io/en/latest/config.html#sample-file
[tool.coverage.run]
source = [
  'gw_signal_tools'
]

omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  '*/_version.py',
  '*/__init__.py',
  '*/test_utils.py',
]

branch = true


[tool.coverage.report]
ignore_errors = true