# Credit to GWPy, where much of the contents of this file is copied from
# (link: https://github.com/gwpy/gwpy/blob/v3.0.7/pyproject.toml)


[build-system]
requires = [
  'setuptools>=64',
  'setuptools_scm>=8',
  'wheel',
]

build-backend = 'setuptools.build_meta'

[project]
name = 'gw_signal_tools'
description = 'Tools for GW Data Analysis'
readme = 'README.md'
# readme = {file = "README.md", content-type = "text/markdown"}
# license = {file = "LICENSE"}
authors = [
  {name = 'Max Melching', email = 'max.melching@aei.mpg.de'},
  {name = 'Frank Ohme', email = 'frank.ohme@aei.mpg.de'},
]
maintainers = [
  {name = 'Max Melching', email = 'max.melching@aei.mpg.de'},
]

# requires
requires-python = '>=3.9'  # Constrained by lal and certain syntax we use
dependencies = [
  'gwpy>=3',
  'matplotlib',
  'numdifftools',
  'numpy',
  'scipy',
]

classifiers=[
  'Operating System :: POSIX',
  'Operating System :: MacOS',
  'Topic :: Scientific/Engineering :: Physics',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python',
]

# dynamic properties set by tools
dynamic = [
  'version',
]


[project.urls]
"Source Code" = 'https://gitlab.aei.uni-hannover.de/fohme/gw-signal-tools'
# "Documentation" = ''  # to be built
"Bug Tracker" = 'https://gitlab.aei.uni-hannover.de/fohme/gw-signal-tools/issues'


[project.optional-dependencies]
dev = [
  'coverage',
  'mypy',
  'pre-commit',
  'pycbc',
  'pytest',
  'ruff',
  'setuptools_scm',  # Enables version test via 'python -m setuptools_scm'
]
jupyter = [
  'jupyter',
]
lal = [
  'lalsuite',
]
pyseobnr = [
  'pyseobnr',
]


[tool.setuptools.packages.find]
# note: this is only required in CI, which otherwise fails because
#       GHA is creating a temporary directory that setuptools
#       discovers as another top-level package
include = [
  'gw_signal_tools*',
]


[tool.setuptools.package-data]
# gw_signal_tools = ["*.txt", "*.sty"]  # I think we should be more specific
gw_signal_tools = ["plot_stylesheet.sty"]
"gw_signal_tools.PSDs" = ["*.txt"]


# How versioning is handled
# -> important when running 'python -m setuptools_scm', installation
#    uses one from setup.py because this file has no instructions for that
[tool.setuptools_scm]
write_to = 'gw_signal_tools/_version.py'
version_scheme = 'no-guess-dev'
local_scheme = 'dirty-tag'
fallback_version = 'unknown'  # what is done if no version found -> or ''?


# Syntax from https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file

[tool.mypy]
show_error_codes = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
  'astropy.*',
  'gwpy.*',
  'lalsimulation.*',
  'numdifftools.*',
  'scipy.*'
]

ignore_missing_imports = true


# Syntax: https://docs.pytest.org/en/7.3.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = [
  'gw_signal_tools',  # For doctests
  'tests',
]

addopts = [
  '-v',
  '--doctest-modules',
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

filterwarnings = [
  'ignore:pkg_resources is deprecated as an API..*',
  # ignore: Deprecated call to `pkg_resources.declare_namespace('ligo')`..*  ; Including string 'ligo' does not work
  'ignore:Deprecated call to `pkg_resources.declare_namespace(.*)`.*',
  'ignore:This code is currently UNREVIEWED, use with caution!',
  'ignore:.*This code is currently UNREVIEWED, use with caution!.*',
  'ignore: Are you sure you want to have a q of.*',  # We skip when this occurs in test_fisher_utils, so no need to worry
  'ignore: Please use `OptimizeResult` from the `scipy.optimize` namespace.*'
]


# Syntax from https://coverage.readthedocs.io/en/latest/config.html#sample-file
[tool.coverage.run]
source = [
  'gw_signal_tools'
]

omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  '*/_version.py',
  '*/__init__.py',
  '*/test_utils.py',
  '*/ft.py',
]

branch = true


[tool.coverage.report]
ignore_errors = true


[tool.black]  # For tests without file changes, run black --diff --color <file>
verbose = true

# line-length = 88

target-version = ['py311']

skip-string-normalization = true


[tool.ruff]
# For tests without file changes, run ruff check <file> (with --diff it shows only what would be fixed, not all issues),
# ruff format --check <file> (similarly, a --diff option is available).
# -> I prefer with no option for check and with --diff for format.
# To apply fixes, run ruff check --fix <file>, ruff format <file>.
# To check for specific complaints, use e.g. ruff check --select F401 <file>.
# To ignore specific complaints, use e.g. ruff check --ignore F401 <file>.

# verbose = true -> not working

# select = []
# lint.ignore = ['E402']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402', 'F401', 'F403']  # ignore "module level import not at top of file", "imported but unused", "star imports" in __init__.py files
