
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

# [versioneer]
# VCS = git
# style = pep440
# versionfile_source = gw_signal_tools/_version.py
# versionfile_build = gw_signal_tools/_version.py
# tag_prefix = v
# parentdir_prefix = gw_signal_tools

# [project]
# # version = "0.0.1"  # Remove any existing version parameter.
# dynamic = ['version']

# [tool:setuptools_scm]
# version_file = 'gw_signal_tools/_version.py'


[tool:pytest]
filterwarnings = 
    ; ignore:../../../miniconda3/envs/gw_signal_tools/lib/python3.11/site-packages*  ; Does not work. And would perhaps be bad anyway
    ignore:pkg_resources is deprecated as an API..*
    ; ignore: Deprecated call to `pkg_resources.declare_namespace('ligo')`..*  ; Including string 'ligo' does not work
    ignore:Deprecated call to `pkg_resources.declare_namespace(.*)`.*
    ignore:This code is currently UNREVIEWED, use with caution!


[mypy]
show_error_codes = True

[mypy-astropy.*]
ignore_missing_imports = True

[mypy-gwpy.*]
ignore_missing_imports = True

[mypy-lalsimulation.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True
